<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/gallery_thumbnail_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:elevation="3dp"
            card_view:cardCornerRadius="1dp">
...
                    android:background="@color/transparent_gray"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="@dimen/paddingSizeMicro">


                <TextView
                        android:id="@+id/feed_author_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Feed"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textSizeMedium"/>
...
