<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_action_refresh"
        android:orderInCategory="100"
        android:title="Refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="always" />

</menu>