<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activities.FlickrGalleryActivity">


    <GridView
            android:id="@+id/flickr_gallery_gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="134dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="@dimen/marginSizeSmallPlus"
            android:columnWidth="@dimen/grid_column_height"
            android:scrollbars="none"
            android:numColumns="auto_fit"
            android:verticalSpacing="@dimen/paddingSizeMedium"
            />


    <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/loading_pb"/>

</androidx.constraintlayout.widget.ConstraintLayout>